@@ -1,3 +1,8 @@
+2010-06-14  Sergio Martin <sergio.martin@artica.es>
+
+	* godmode/reporting/graph_builder.php: Merged fixed 
+	from trunk
+
 2010-06-09  Miguel de Dios  <miguel.dedios@artica.es>
 
 	* include/javascript/pandora.js: fixed lost semi colon.
